# triangle-rs

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: test.yml
examples/: box.rs  box_with_hole.rs  delaunator_figure_with_right_angles.rs  delaunay.rs  figure_with_right_angles.rs  gmt_m1_triangulation.rs  spade_example.rs  spade_figure_with_right_angles.rs  square.rs  triangulate_figure_with_right_angles.rs  triangulate_lib.rs
src/: lib.rs  triangle.c  triangle.h  triangle.rs
