[package]
name = "triangle-rs"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "A Rust binder for the 2D mesh generator and Delaunay triangulator Triangle"
repository = "https://github.com/rconan/triangle-rs"
documentation = "https://docs.rs/triangle-rs"
readme = "README.md"
categories = ["algorithms", "mathematics", "science", "simulation"]


[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
spade = "2.2.0"
#complot = { path = "../complot", features = ["svg"] }
#plotters = "0.3.4"
plotters = "0.3.5"
triangulate = { git = "https://github.com/colinjneville/triangulate.git", branch = "master" }
delaunator = { git = "https://github.com/mourner/delaunator-rs.git", branch = "master" }

[dependencies]
rayon = "1.5.0"
serde = { version = "1.0.118", features = ["derive"] }
serde-pickle = "0.6.2"
